refactor : updated data processing to be data validation

--- a/notebooks/02_data_validation.ipynb
+++ b/notebooks/02_data_validation.ipynb
@@ -68,12 +68,12 @@
     "import pandas as pd\n",
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "4   Executive        18468.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "4   Executive        18468.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,11 +756,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv(\"./data/processed/travel_processed.csv\", index=False)"
+    "df.drop(\"CustomerID\", axis=1, inplace=True)\n",
+    "df[\"TotalVisiting\"] = (\n",
+    "    df[\"NumberOfChildrenVisiting\"] + df[\"NumberOfPersonVisiting\"]\n",
+    ")\n",
+    "df.drop(\n",
+    "    [\"NumberOfChildrenVisiting\", \"NumberOfPersonVisiting\"], axis=1, inplace=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ProdTaken', 'Age', 'TypeofContact', 'CityTier', 'DurationOfPitch',\n",
+       "       'Occupation', 'Gender', 'NumberOfFollowups', 'ProductPitched',\n",
+       "       'PreferredPropertyStar', 'MaritalStatus', 'NumberOfTrips', 'Passport',\n",
+       "       'PitchSatisfactionScore', 'OwnCar', 'Designation', 'MonthlyIncome',\n",
+       "       'TotalVisiting'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4888 entries, 0 to 4887\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   ProdTaken               4888 non-null   int64  \n",
+      " 1   Age                     4888 non-null   float64\n",
+      " 2   TypeofContact           4888 non-null   object \n",
+      " 3   CityTier                4888 non-null   int64  \n",
+      " 4   DurationOfPitch         4888 non-null   float64\n",
+      " 5   Occupation              4888 non-null   object \n",
+      " 6   Gender                  4888 non-null   object \n",
+      " 7   NumberOfFollowups       4888 non-null   float64\n",
+      " 8   ProductPitched          4888 non-null   object \n",
+      " 9   PreferredPropertyStar   4888 non-null   float64\n",
+      " 10  MaritalStatus           4888 non-null   object \n",
+      " 11  NumberOfTrips           4888 non-null   float64\n",
+      " 12  Passport                4888 non-null   int64  \n",
+      " 13  PitchSatisfactionScore  4888 non-null   int64  \n",
+      " 14  OwnCar                  4888 non-null   int64  \n",
+      " 15  Designation             4888 non-null   object \n",
+      " 16  MonthlyIncome           4888 non-null   float64\n",
+      " 17  TotalVisiting           4888 non-null   float64\n",
+      "dtypes: float64(7), int64(5), object(6)\n",
+      "memory usage: 687.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./data/processed/travel_processed.csv\", index=False)"
    ]
   },
   {
@@ -774,10 +855,12 @@
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class DataPreprocessingConfig:\n",
+    "class DataValidationConfig:\n",
     "    root_dir: Path\n",
     "    raw_data_path: Path\n",
-    "    processed_data_path: Path"
+    "    processed_data_path: Path\n",
+    "    all_schema: dict\n",
+    "    STATUS_FILE: Path"
    ]
   },
   {
@@ -810,14 +893,17 @@
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
     "\n",
-    "    def get_data_preprocessing_config(self) -> DataPreprocessingConfig:\n",
-    "        config = self.config.data_preprocessing\n",
+    "    def get_data_validation_config(self) -> DataValidationConfig:\n",
+    "        config = self.config.data_validation\n",
+    "        schema = self.schema.COLUMNS\n",
     "        create_directories([config.root_dir])\n",
     "\n",
-    "        return DataPreprocessingConfig(\n",
+    "        return DataValidationConfig(\n",
     "            root_dir=config.root_dir,\n",
     "            raw_data_path=config.raw_data_path,\n",
     "            processed_data_path=config.processed_data_path,\n",
+    "            all_schema=schema,\n",
+    "            STATUS_FILE=config.STATUS_FILE,\n",
     "        )"
    ]
   },
@@ -833,15 +919,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataPreprocessing:\n",
-    "    def __init__(self, config: DataPreprocessingConfig):\n",
+    "class DataValidation:\n",
+    "    def __init__(self, config: DataValidationConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    def preprocess_and_save_data(self):\n",
+    "    def preprocess_data(self):\n",
     "        df = pd.read_csv(self.config.raw_data_path)\n",
     "        logger.info(f\"Data loaded from {self.config.raw_data_path}\")\n",
     "\n",
@@ -861,38 +947,75 @@
     "        )\n",
     "        df[\"MonthlyIncome\"].fillna(df[\"MonthlyIncome\"].median(), inplace=True)\n",
     "\n",
+    "        df.drop(\"CustomerID\", axis=1, inplace=True)\n",
+    "        df[\"TotalVisiting\"] = (\n",
+    "            df[\"NumberOfChildrenVisiting\"] + df[\"NumberOfPersonVisiting\"]\n",
+    "        )\n",
+    "        df.drop(\n",
+    "            [\"NumberOfChildrenVisiting\", \"NumberOfPersonVisiting\"], axis=1, inplace=True\n",
+    "        )\n",
+    "\n",
     "        logger.info(\"Data preprocessed\")\n",
     "\n",
+    "        return df\n",
+    "\n",
+    "    def save_data(self, df):\n",
     "        df.to_csv(self.config.processed_data_path, index=False)\n",
-    "        logger.info(f\"Data saved at {self.config.processed_data_path}\")"
+    "        logger.info(f\"Data saved at {self.config.processed_data_path}\")\n",
+    "\n",
+    "    def validate_all_columns(self) -> bool:\n",
+    "        try:\n",
+    "            validation_status = None\n",
+    "\n",
+    "            data = pd.read_csv(self.config.processed_data_path)\n",
+    "            all_cols = list(data.columns)\n",
+    "\n",
+    "            all_schema = self.config.all_schema.keys()\n",
+    "\n",
+    "            for col in all_cols:\n",
+    "                if col not in all_schema:\n",
+    "                    validation_status = False\n",
+    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
+    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "                else:\n",
+    "                    validation_status = True\n",
+    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
+    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "\n",
+    "            return validation_status\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            raise e\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-08 13:58:04,824: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-09-08 13:58:04,826: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-08 13:58:04,828: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-09-08 13:58:04,829: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-08 13:58:04,829: INFO: common: created directory at: artifacts/data_preprocessing]\n",
-      "[2024-09-08 13:58:04,858: INFO: 758777754: Data loaded from artifacts/data_ingestion/travel.csv]\n",
-      "[2024-09-08 13:58:04,921: INFO: 758777754: Data preprocessed]\n",
-      "[2024-09-08 13:58:04,971: INFO: 758777754: Data saved at artifacts/data_preprocessing/travel_processed.csv]\n"
+      "[2024-09-08 21:35:19,849: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-09-08 21:35:19,851: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-08 21:35:19,854: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-09-08 21:35:19,855: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-08 21:35:19,856: INFO: common: created directory at: artifacts/data_validation]\n",
+      "[2024-09-08 21:35:19,866: INFO: 1207102321: Data loaded from artifacts/data_ingestion/travel.csv]\n",
+      "[2024-09-08 21:35:19,876: INFO: 1207102321: Data preprocessed]\n",
+      "[2024-09-08 21:35:19,921: INFO: 1207102321: Data saved at artifacts/data_validation/travel_processed.csv]\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    data_preprocessing_config = config.get_data_preprocessing_config()\n",
-    "    data_preprocessing = DataPreprocessing(config=data_preprocessing_config)\n",
-    "    data_preprocessing.preprocess_and_save_data()\n",
+    "    data_validation_config = config.get_data_validation_config()\n",
+    "    data_validation = DataValidation(config=data_validation_config)\n",
+    "    df = data_validation.preprocess_data()\n",
+    "    data_validation.save_data(df)\n",
+    "    data_validation.validate_all_columns()\n",
     "except Exception as e:\n",
     "    raise e"
    ]
