--- a/notebooks/03_data_transformation.ipynb
+++ b/notebooks/03_data_transformation.ipynb
@@ -488,12 +488,12 @@
     "    def __init__(\n",
     "        self,\n",
     "        config_filepath=CONFIG_FILE_PATH,\n",
-    "        params_filepath=PARAMS_FILE_PATH,\n",
+    "        model_config_filepath=MODEL_CONFIG_FILE_PATH,\n",
     "        schema_filepath=SCHEMA_FILE_PATH,\n",
     "    ):\n",
     "\n",
     "        self.config = read_yaml(config_filepath)\n",
-    "        self.params = read_yaml(params_filepath)\n",
+    "        self.model_config = read_yaml(model_config_filepath)\n",
     "        self.schema = read_yaml(schema_filepath)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
