--- a/notebooks/05_model_evaluation.ipynb
+++ b/notebooks/05_model_evaluation.ipynb
@@ -168,75 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Accessing as Divyanshu9822\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Accessing as Divyanshu9822\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-09-09 02:23:55,738: INFO: helpers: Accessing as Divyanshu9822]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Initialized MLflow to track repo <span style=\"color: #008000; text-decoration-color: #008000\">\"divyanshu9822/ml-ops-holiday-package-prediction\"</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Initialized MLflow to track repo \u001b[32m\"divyanshu9822/ml-ops-holiday-package-prediction\"\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-09-09 02:23:56,150: INFO: helpers: Initialized MLflow to track repo \"divyanshu9822/ml-ops-holiday-package-prediction\"]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Repository divyanshu9822/ml-ops-holiday-package-prediction initialized!\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Repository divyanshu9822/ml-ops-holiday-package-prediction initialized!\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-09-09 02:23:56,151: INFO: helpers: Repository divyanshu9822/ml-ops-holiday-package-prediction initialized!]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import dagshub\n",
-    "dagshub.init(repo_owner='divyanshu9822',\n",
-    "             repo_name='ml-ops-holiday-package-prediction',\n",
-    "             mlflow=True)"
+    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"\"\n",
+    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"\"\n",
+    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"\""
    ]
   },
   {
@@ -323,25 +261,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-09 02:23:56,177: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-09-09 02:23:56,180: INFO: common: yaml file: model_config.yaml loaded successfully]\n",
-      "[2024-09-09 02:23:56,183: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-09-09 02:23:56,183: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-09 02:23:56,184: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "[2024-09-09 02:23:57,000: INFO: common: json file saved at: artifacts/model_evaluation/metrics.json]\n"
+      "[2024-09-09 14:03:49,816: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-09-09 14:03:49,820: INFO: common: yaml file: model_config.yaml loaded successfully]\n",
+      "[2024-09-09 14:03:49,823: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-09-09 14:03:49,824: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-09 14:03:49,825: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2024-09-09 14:03:50,864: INFO: common: json file saved at: artifacts/model_evaluation/metrics.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/divyanshu9871gmail.com/Desktop/ml-ops-holiday-package-prediction/venv/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [02:23:59] WARNING: /Users/runner/work/xgboost/xgboost/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "/Users/divyanshu9871gmail.com/Desktop/ml-ops-holiday-package-prediction/venv/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [14:03:53] WARNING: /Users/runner/work/xgboost/xgboost/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
       "  warnings.warn(smsg, UserWarning)\n",
       "/Users/divyanshu9871gmail.com/Desktop/ml-ops-holiday-package-prediction/venv/lib/python3.10/site-packages/_distutils_hack/__init__.py:31: UserWarning: Setuptools is replacing distutils. Support for replacing an already imported distutils is deprecated. In the future, this condition will fail. Register concerns at https://github.com/pypa/setuptools/issues/new?template=distutils-deprecation.yml\n",
       "  warnings.warn(\n",
-      "Successfully registered model 'Xgboost'.\n",
-      "2024/09/09 02:24:09 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: Xgboost, version 1\n",
-      "Created version '1' of model 'Xgboost'.\n"
+      "Registered model 'Xgboost' already exists. Creating a new version of this model...\n",
+      "2024/09/09 14:04:02 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: Xgboost, version 8\n",
+      "Created version '8' of model 'Xgboost'.\n"
      ]
     }
    ],
